konversi java ke jar, dan jar ke exe
Akhirnya setelah sekian lama waktu dihabiskan, bisa juga mengkonveri
aplikasi java menjadi jar, dan jar menjadi exe, menggunakan banyak
aplikasi tambaha. Akan dibahas nanti di dokumentasi.